# sentry_sim

./: .gitignore  .gitmodules  README.md  build_packages.sh
autonomous_exploration_development_environment/: .gitignore
autonomous_exploration_development_environment/src/sensor_scan_generation/launch/: sensor_scan_generation_launch.py
autonomous_exploration_development_environment/src/terrain_analysis/launch/: terrain_analysis.launch  terrain_analysis_launch.py
autonomous_exploration_development_environment/src/vehicle_simulator/: CMakeLists.txt
autonomous_exploration_development_environment/src/vehicle_simulator/launch/: robot_simulator_launch.py
autonomous_exploration_development_environment/src/vehicle_simulator/src/: robotSimulator.cpp
autonomous_exploration_development_environment/src/visualization_tools/launch/: visualization_tools_launch.py
far_planner/src/graph_decoder/launch/: decoder_launch.py
install/: local_setup.sh  setup.sh
install/boundary_handler/lib/boundary_handler/: boundary_handler
install/boundary_handler/share/boundary_handler/: local_setup.sh  package.sh
install/far_planner/lib/far_planner/: far_planner
install/far_planner/share/far_planner/: local_setup.sh  package.sh
install/far_planner/share/far_planner/launch/: far_planner_launch.py
install/goalpoint_rviz_plugin/share/goalpoint_rviz_plugin/: local_setup.sh  package.sh
install/graph_decoder/lib/graph_decoder/: graph_decoder
install/graph_decoder/share/graph_decoder/: local_setup.sh  package.sh
install/loam_interface/share/loam_interface/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/loam_interface/share/loam_interface/cmake/: loam_interfaceConfig.cmake
install/local_planner/share/local_planner/: local_setup.sh  package.sh
install/local_planner/share/local_planner/launch/: local_planner_launch.py
install/sensor_scan_generation/share/sensor_scan_generation/: local_setup.sh  package.sh
install/sentry_controller/lib/sentry_controller/: sentry_control_key
install/sentry_controller/share/sentry_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sentry_controller/share/sentry_controller/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  sentry_controllerConfig.cmake
install/sentry_gazebo/share/sentry_gazebo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sentry_gazebo/share/sentry_gazebo/cmake/: sentry_gazeboConfig.cmake
install/sentry_gazebo/share/sentry_gazebo/launch/: gazebo_rmuc_launch.py  startup_rmuc_launch.py
install/sentry_gazebo/share/sentry_gazebo/urdf/: mecanum_base.xacro
install/sentry_global_planner/share/sentry_global_planner/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sentry_global_planner/share/sentry_global_planner/cmake/: sentry_global_plannerConfig.cmake
install/teleop_rviz_plugin/share/teleop_rviz_plugin/: local_setup.sh  package.sh
install/terrain_analysis/share/terrain_analysis/: local_setup.sh  package.sh
install/terrain_analysis_ext/share/terrain_analysis_ext/: local_setup.sh  package.sh
install/terrain_analysis_ext/share/terrain_analysis_ext/launch/: terrain_analysis_ext_launch.py
install/vehicle_simulator/share/vehicle_simulator/: local_setup.sh  package.sh  package.xml
install/vehicle_simulator/share/vehicle_simulator/launch/: system_rmuc_launch.py
install/velodyne_description/share/velodyne_description/: local_setup.sh  package.sh  package.xml
install/velodyne_description/share/velodyne_description/cmake/: velodyne_descriptionConfig-version.cmake  velodyne_descriptionConfig.cmake
install/velodyne_gazebo_plugins/share/velodyne_gazebo_plugins/: package.bash  package.zsh
install/visibility_graph_msg/share/visibility_graph_msg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/visibility_graph_msg/share/visibility_graph_msg/cmake/: export_visibility_graph_msg__rosidl_generator_cExport-noconfig.cmake  export_visibility_graph_msg__rosidl_generator_pyExport-noconfig.cmake  export_visibility_graph_msg__rosidl_generator_pyExport.cmake  export_visibility_graph_msg__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_visibility_graph_msg__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  (+4 more)
install/visualization_tools/share/visualization_tools/: local_setup.sh  package.dsv  package.ps1  package.sh
install/waypoint_example/share/waypoint_example/: local_setup.sh  package.sh
install/waypoint_rviz_plugin/share/waypoint_rviz_plugin/: local_setup.sh  package.sh
sentry_controller/: CMakeLists.txt  package.xml
sentry_controller/include/sentry_controller/: sentry_control_key.h
sentry_controller/src/: sentry_control_key.cpp
sentry_gazebo/: CMakeLists.txt  package.xml
sentry_gazebo/launch/: gazebo_rmuc_launch.py  gazebo_rmuc_test_launch.py  startup_rmuc_launch.py
sentry_gazebo/urdf/: base_drive.gazebo  test_robot.xacro
sentry_gazebo/worlds/: 2023_v_4_1.sdf
sentry_global_planner/: CMakeLists.txt  package.xml
sentry_global_planner/launch/: sentry_global_planner_launch.py  sentry_global_planner_test_launch.py
sentry_global_planner/src/: path2waypoint.cpp
velodyne_simulator/velodyne_description/: CMakeLists.txt  package.xml
velodyne_simulator/velodyne_gazebo_plugins/: CMakeLists.txt  package.xml
velodyne_simulator/velodyne_gazebo_plugins/include/velodyne_gazebo_plugins/: GazeboRosVelodyneLaser.h
velodyne_simulator/velodyne_gazebo_plugins/src/: GazeboRosVelodyneLaser.cpp
velodyne_simulator/velodyne_simulator/: CMakeLists.txt  package.xml
(+10 files in other folders)
